# My_Second_Cmake_project

./: CMakeLists.txt  Class_Figure.cpp  Class_Figure.h  Class_RightTriangle.cpp  Class_RightTriangle.h  Class_Triangle.cpp  Class_Triangle.h  Equilateral_Triangle.cpp  Equilateral_Triangle.h  Isosceles_Triangle.cpp  Isosceles_Triangle.h  M4_L7_Task_3.cpp  M4_L7_Task_3.sln  M4_L7_Task_3.vcxproj  M4_L7_Task_3.vcxproj.filters  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  README.md  Rectangle.cpp  Rectangle.h  Rhomb.cpp  Rhomb.h  Square.cpp  Square.h
