cmake_minimum_required(VERSION 3.22.0)
project (My_Second_Cmake_project)
add_executable (Figures M4_L7_Task_3.cpp Class_Figure.cpp Class_Figure.h Class_RightTriangle.cpp Class_RightTriangle.h 
Class_Triangle.cpp Class_Triangle.h Equilateral_Triangle.cpp Equilateral_Triangle.h Isosceles_Triangle.cpp 
Isosceles_Triangle.h Parallelogram.cpp Parallelogram.h Quadrangle.cpp Quadrangle.h Rectangle.cpp Rectangle.h Rhomb.cpp Rhomb.h Square.cpp Square.h)